fix tab vertical alignment

--- a/src/app/styles/tab-strip.module.scss
+++ b/src/app/styles/tab-strip.module.scss
@@ -31,6 +31,7 @@
 	font-family: var(--font-inter-sans), Arial, Helvetica, sans-serif;
 	flex: 1 1;
 	flex-basis: 0;
+	display: flex;
 	max-width: 20ch;
 	outline: none;
 	border: none;
@@ -93,6 +94,7 @@
 		padding-inline: var(--padding-left) var(--padding-right);
 		padding-block: var(--padding-block);
 		border: var(--border-width) solid var(--border-color);
+		flex: 1 1;
 		display: flex;
 		position: relative;
 		justify-content: space-between;
